Fixed Output Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,11 +161,15 @@ label:active {
 .output {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: top;
     margin-bottom: 1em;
 }
 
 h1 {
+    text-align: right;
+    width: 4em;
+    line-height: 1;
+    word-break: break-all;
     font-size: 2.5rem;
     color: hsl(172, 67%, 45%);
 }
